--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -84,7 +84,6 @@ video {
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline;
 }
 
 article,
@@ -226,6 +225,7 @@ img {
     border-top:1px dotted #555;
 }
 .extrait hr.dernier{
+    margin-top: 30px;
     border-top:1px double #222;
 }
 .extrait .Mention{
@@ -233,7 +233,7 @@ img {
     align-items: center;
     flex-direction: column;
 
-    height: 200px;
+    height: 70px;
 }
 .extrait{
     padding: 30px;
@@ -310,7 +310,7 @@ body {
 
 /*-- title --*/
 
-h1 {
+.content h1 {
     font-size: 3.5em;
     color: #fff;
     text-align: center;
@@ -758,3 +758,52 @@ h1 span {
 }
 
 /*-- //responsive --*/
+
+
+/*-- Login --*/
+.login {
+    height: 100vh;
+    background: url("../img/fond1.jpg") no-repeat center;
+    background-size: cover;
+}
+.login h1 {
+    font-size: 3.5em;
+    color: #555;
+    text-align: center;
+    padding: 3vw 1vw;
+    font-family: 'Sigmar One', cursive;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.32);
+}
+
+
+.deconnexion {
+    color: #66615B;
+    transition: all .5s;
+    cursor: pointer;
+}
+.deconnexion:hover {
+    color: #fff;
+    font-weight: bold;
+    transition: all .5s;
+}
+
+/* Print Extrait */
+.paragrapheMention {
+    font-weight: 700;
+    font-size: larger;
+    line-height: 1.3em;
+    margin-bottom: 50px;
+
+}
+
+/* Download Button Style */
+
+.absolute-download {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 40px;
+    width: 40px;
+    /* border-radius: 50%;
+    box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.15); */
+}
