--- a/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -292,6 +292,7 @@
 
 
 .main-panel{
+    min-height: 100vh;
     position: relative;
     float: right;
     width: $sidebar-width;
@@ -304,6 +305,455 @@
         padding: 0 30px 30px;
         min-height: calc(100vh - 123px);
         margin-top: 93px;
+    }
+    > .containerFull {
+        min-height: 100vh;
+
+        > .absoluteCenter{
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+
+            .sp-container {
+                position: relative;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                z-index: 0;
+                background: -webkit-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+                background: -moz-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+                background: -ms-radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+                background: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3) 35%, rgba(0, 0, 0, 0.7));
+              }
+              
+              .sp-content {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: 0px;
+                top: 0px;
+                z-index: 1000;
+              }
+              
+              .sp-container h2 {
+                position: absolute;
+                top: 50%;
+                line-height: 100px;
+                height: 90px;
+                margin-top: -50px;
+                font-size: 60px;
+                width: 100%;
+                text-align: center;
+                color: transparent;
+                -webkit-animation: blurFadeInOut 3s ease-in backwards;
+                -moz-animation: blurFadeInOut 3s ease-in backwards;
+                -ms-animation: blurFadeInOut 3s ease-in backwards;
+                animation: blurFadeInOut 3s ease-in backwards;
+              
+                &.frame-1 {
+                  -webkit-animation-delay: 0s;
+                  -moz-animation-delay: 0s;
+                  -ms-animation-delay: 0s;
+                  animation-delay: 0s;
+                }
+              
+                &.frame-2 {
+                  -webkit-animation-delay: 3s;
+                  -moz-animation-delay: 3s;
+                  -ms-animation-delay: 3s;
+                  animation-delay: 3s;
+                }
+              
+                &.frame-3 {
+                  -webkit-animation-delay: 6s;
+                  -moz-animation-delay: 6s;
+                  -ms-animation-delay: 6s;
+                  animation-delay: 6s;
+                }
+              
+                &.frame-4 {
+                  font-size: 200px;
+                  -webkit-animation-delay: 9s;
+                  -moz-animation-delay: 9s;
+                  -ms-animation-delay: 9s;
+                  animation-delay: 9s;
+                }
+              
+                &.frame-5 {
+                  -webkit-animation: none;
+                  -moz-animation: none;
+                  -ms-animation: none;
+                  animation: none;
+                  color: transparent;
+                  text-shadow: 0px 0px 1px #fff;
+              
+                  span {
+                    -webkit-animation: blurFadeIn 3s ease-in 12s backwards;
+                    -moz-animation: blurFadeIn 1s ease-in 12s backwards;
+                    -ms-animation: blurFadeIn 3s ease-in 12s backwards;
+                    animation: blurFadeIn 3s ease-in 12s backwards;
+                    color: transparent;
+                    text-shadow: 0px 0px 1px #fff;
+              
+                    &:nth-child(2) {
+                      -webkit-animation-delay: 13s;
+                      -moz-animation-delay: 13s;
+                      -ms-animation-delay: 13s;
+                      animation-delay: 13s;
+                    }
+              
+                    &:nth-child(3) {
+                      -webkit-animation-delay: 14s;
+                      -moz-animation-delay: 14s;
+                      -ms-animation-delay: 14s;
+                      animation-delay: 14s;
+                    }
+                  }
+                }
+              }
+              
+              .sp-globe {
+                position: absolute;
+                width: 282px;
+                height: 273px;
+                left: 50%;
+                top: 50%;
+                margin: -137px 0 0 -141px;
+                background: transparent url(http://web-sonick.zz.mu/images/sl/globe.png) no-repeat top left;
+                -webkit-animation: fadeInBack 3.6s linear 14s backwards;
+                -moz-animation: fadeInBack 3.6s linear 14s backwards;
+                -ms-animation: fadeInBack 3.6s linear 14s backwards;
+                animation: fadeInBack 3.6s linear 14s backwards;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+                filter: alpha(opacity = 30);
+                opacity: 0.3;
+                -webkit-transform: scale(5);
+                -moz-transform: scale(5);
+                -o-transform: scale(5);
+                -ms-transform: scale(5);
+                transform: scale(5);
+              }
+              
+              .sp-circle-link {
+                position: absolute;
+                left: 50%;
+                bottom: 100px;
+                margin-left: -50px;
+                text-align: center;
+                line-height: 100px;
+                width: 100px;
+                height: 100px;
+                background: #fff;
+                color: #3f1616;
+                font-size: 25px;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                border-radius: 50%;
+                -webkit-animation: fadeInRotate 1s linear 16s backwards;
+                -moz-animation: fadeInRotate 1s linear 16s backwards;
+                -ms-animation: fadeInRotate 1s linear 16s backwards;
+                animation: fadeInRotate 1s linear 16s backwards;
+                -webkit-transform: scale(1) rotate(0deg);
+                -moz-transform: scale(1) rotate(0deg);
+                -o-transform: scale(1) rotate(0deg);
+                -ms-transform: scale(1) rotate(0deg);
+                transform: scale(1) rotate(0deg);
+              
+                &:hover {
+                  background: #85373b;
+                  color: #fff;
+                }
+              }
+              
+              /**/
+              
+              @-webkit-keyframes blurFadeInOut {
+                0% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 40px #fff;
+                  -webkit-transform: scale(1.3);
+                }
+              
+                20%, 75% {
+                  opacity: 1;
+                  text-shadow: 0px 0px 1px #fff;
+                  -webkit-transform: scale(1);
+                }
+              
+                100% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 50px #fff;
+                  -webkit-transform: scale(0);
+                }
+              }
+              
+              @-webkit-keyframes blurFadeIn {
+                0% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 40px #fff;
+                  -webkit-transform: scale(1.3);
+                }
+              
+                50% {
+                  opacity: 0.5;
+                  text-shadow: 0px 0px 10px #fff;
+                  -webkit-transform: scale(1.1);
+                }
+              
+                100% {
+                  opacity: 1;
+                  text-shadow: 
+                    1px -1px 0 #767676, 
+                    -1px 2px 1px #737272, 
+                    -2px 4px 1px #767474, 
+                    -3px 6px 1px #787777, 
+                    -4px 8px 1px #7b7a7a, 
+                    -5px 10px 1px #7f7d7d, 
+                    -6px 12px 1px #828181, 
+                    -7px 14px 1px #868585, 
+                    -8px 16px 1px #8b8a89, 
+                    -9px 18px 1px #8f8e8d, 
+                    -10px 20px 1px #949392, 
+                    -11px 22px 1px #999897, 
+                    -12px 24px 1px #9e9c9c, 
+                    -13px 26px 1px #a3a1a1, 
+                    -14px 28px 1px #a8a6a6, 
+                    -15px 30px 1px #adabab, 
+                    -16px 32px 1px #b2b1b0, 
+                    -17px 34px 1px #b7b6b5, 
+                    -18px 36px 1px #bcbbba, 
+                    -19px 38px 1px #c1bfbf, 
+                    -20px 40px 1px #c6c4c4, 
+                    -21px 42px 1px #cbc9c8, 
+                    -22px 44px 1px #cfcdcd, 
+                    -23px 46px 1px #d4d2d1, 
+                    -24px 48px 1px #d8d6d5, 
+                    -25px 50px 1px #dbdad9, 
+                    -26px 52px 1px #dfdddc, 
+                    -27px 54px 1px #e2e0df, 
+                    -28px 56px 1px #e4e3e2;
+                  -webkit-transform: scale(1);
+                }
+              }
+              
+              @-webkit-keyframes fadeInBack {
+                0% {
+                  opacity: 0;
+                  -webkit-transform: scale(0);
+                }
+              
+                50% {
+                  opacity: 0.4;
+                  -webkit-transform: scale(2);
+                }
+              
+                100% {
+                  opacity: 0.2;
+                  -webkit-transform: scale(5);
+                }
+              }
+              
+              @-webkit-keyframes fadeInRotate {
+                0% {
+                  opacity: 0;
+                  -webkit-transform: scale(0) rotate(360deg);
+                }
+              
+                100% {
+                  opacity: 1;
+                  -webkit-transform: scale(1) rotate(0deg);
+                }
+              }
+              
+              /**/
+              
+              @-moz-keyframes blurFadeInOut {
+                0% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 40px #fff;
+                  -moz-transform: scale(1.3);
+                }
+              
+                20%, 75% {
+                  opacity: 1;
+                  text-shadow: 0px 0px 1px #fff;
+                  -moz-transform: scale(1);
+                }
+              
+                100% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 50px #fff;
+                  -moz-transform: scale(0);
+                }
+              }
+              
+              @-moz-keyframes blurFadeIn {
+                0% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 40px #fff;
+                  -moz-transform: scale(1.3);
+                }
+              
+                100% {
+                  opacity: 1;
+                  text-shadow: 0px 0px 1px #fff;
+                  -moz-transform: scale(1);
+                }
+              }
+              
+              @-moz-keyframes fadeInBack {
+                0% {
+                  opacity: 0;
+                  -moz-transform: scale(0);
+                }
+              
+                50% {
+                  opacity: 0.4;
+                  -moz-transform: scale(2);
+                }
+              
+                100% {
+                  opacity: 0.2;
+                  -moz-transform: scale(5);
+                }
+              }
+              
+              @-moz-keyframes fadeInRotate {
+                0% {
+                  opacity: 0;
+                  -moz-transform: scale(0) rotate(360deg);
+                }
+              
+                100% {
+                  opacity: 1;
+                  -moz-transform: scale(1) rotate(0deg);
+                }
+              }
+              
+              /**/
+              
+              @keyframes blurFadeInOut {
+                0% {
+                  opacity: 0;
+                  text-shadow: 
+                  1px -1px 0 #767676, 
+                  -1px 2px 1px #737272, 
+                  -2px 4px 1px #767474, 
+                  -3px 6px 1px #787777, 
+                  -4px 8px 1px #7b7a7a, 
+                  -5px 10px 1px #7f7d7d, 
+                  -6px 12px 1px #828181, 
+                  -7px 14px 1px #868585, 
+                  -8px 16px 1px #8b8a89, 
+                  -9px 18px 1px #8f8e8d, 
+                  -10px 20px 1px #949392, 
+                  -11px 22px 1px #999897, 
+                  -12px 24px 1px #9e9c9c, 
+                  -13px 26px 1px #a3a1a1, 
+                  -14px 28px 1px #a8a6a6, 
+                  -15px 30px 1px #adabab, 
+                  -16px 32px 1px #b2b1b0, 
+                  -17px 34px 1px #b7b6b5, 
+                  -18px 36px 1px #bcbbba, 
+                  -19px 38px 1px #c1bfbf, 
+                  -20px 40px 1px #c6c4c4, 
+                  -21px 42px 1px #cbc9c8, 
+                  -22px 44px 1px #cfcdcd, 
+                  -23px 46px 1px #d4d2d1, 
+                  -24px 48px 1px #d8d6d5, 
+                  -25px 50px 1px #dbdad9, 
+                  -26px 52px 1px #dfdddc, 
+                  -27px 54px 1px #e2e0df, 
+                  -28px 56px 1px #e4e3e2;
+                  transform: scale(1.3);
+                }
+              
+                20%, 75% {
+                  opacity: 1;
+                  text-shadow: 
+                    0 -1px 0 #fff, 
+                    0 1px 0 #2e2e2e, 
+                    0 2px 0 #2c2c2c, 
+                    0 3px 0 #2a2a2a, 
+                    0 4px 0 #282828, 
+                    0 5px 0 #262626, 
+                    0 6px 0 #242424, 
+                    0 7px 0 #222, 
+                    0 8px 0 #202020, 
+                    0 9px 0 #1e1e1e, 
+                    0 10px 0 #1c1c1c, 
+                    0 11px 0 #1a1a1a, 
+                    0 12px 0 #181818, 
+                    0 13px 0 #161616, 
+                    0 14px 0 #141414, 
+                    0 15px 0 #121212, 
+                    0 22px 30px rgba(0, 0, 0, 0.9);
+                  transform: scale(1);
+                }
+              
+                100% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 50px #fff;
+                  transform: scale(0);
+                }
+              }
+              
+              @keyframes blurFadeIn {
+                0% {
+                  opacity: 0;
+                  text-shadow: 0px 0px 40px #fff;
+                  transform: scale(1.3);
+                }
+              
+                50% {
+                  opacity: 0.5;
+                  text-shadow: 0px 0px 10px #fff;
+                  transform: scale(1.1);
+                }
+              
+                100% {
+                  opacity: 1;
+                  text-shadow: 0px 0px 1px #fff;
+                  transform: scale(1);
+                }
+              }
+              
+              @keyframes fadeInBack {
+                0% {
+                  opacity: 0;
+                  transform: scale(0);
+                }
+              
+                50% {
+                  opacity: 0.4;
+                  transform: scale(2);
+                }
+              
+                100% {
+                  opacity: 0.2;
+                  transform: scale(5);
+                }
+              }
+              
+              @keyframes fadeInRotate {
+                0% {
+                  opacity: 0;
+                  transform: scale(0) rotate(360deg);
+                }
+              
+                100% {
+                  opacity: 1;
+                  transform: scale(1) rotate(0deg);
+                }
+              }
+        }
     }
 
     > .navbar{
